--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
 .App {
-  text-align: center;
+  font-family: "Raleway", sans-serif;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  margin: 1.5% 3%;
+  display: flex;
+  justify-content: flex-end;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.random-btn {
+  border: none;
+  background-color: transparent;
+  color: #4f4f4f;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.random-btn svg {
+  transform: rotate(90deg);
+  margin-left: 5%;
+}
+
+.quote {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 43.2px;
+  width: 32.5%;
+  margin: 0 auto;
+  padding-left: 4%;
+  border-left: 8px solid #f7df94;
+  margin-top: 10%;
+}
+
+.quote-link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 29%;
+  margin: 4% auto 0;
+  padding: 2% 1%;
+}
+
+.quote-link:hover {
+  background-color: #333333;
+}
+
+.quote-link:hover .arrow {
+  visibility: visible;
+}
+
+.quote-link:hover .author {
+  color: #f2f2f2;
+}
+
+.quote-info {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.author {
+  color: #4f4f4f;
+  font-size: 24px;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.genre {
+  color: #828282;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.arrow {
+  visibility: hidden;
+  color: #f2f2f2;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+h2 {
+  width: 28%;
+  margin: 0 auto;
+  font-size: 36px;
+  font-weight: 700;
+  color: #333333;
 }
