--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,34 @@ a {
   cursor: pointer;
   display: flex;
   align-items: center;
+  outline: none;
 }
 
 .random-btn svg {
-  transform: rotate(90deg);
+  transform: rotate(130deg);
   margin-left: 5%;
+}
+
+@keyframes rotate {
+  0% {
+    -moz-transform: rotate(111deg);
+    -webkit-transform: rotate(111deg);
+    -o-transform: rotate(111deg);
+    -ms-transform: rotate(111deg);
+    transform: rotate(111deg);
+  }
+
+  100% {
+    -moz-transform: rotate(670deg);
+    -webkit-transform: rotate(670deg);
+    -o-transform: rotate(670deg);
+    -ms-transform: rotate(670deg);
+    transform: rotate(670deg);
+  }
+}
+
+.rotate {
+  animation: rotate 1s ease;
 }
 
 .quote {
